# strix

./: .gitattributes  .gitmodules  AUTHORS.md  CHANGELOG.md  Cargo.toml  README.md
.cargo/: config
.github/scripts/: git-archive-all  set_timestamps.sh
.github/workflows/: ci.yml  prepare-release-windows.yml  prepare-release.yml
doc/: BUILDING.md  FORMATS.md  USAGE.md
lib/abc/: Cargo.toml  build.rs
lib/abc/c/aig/aig/: aig.h  aigCheck.c  aigDfs.c  aigDup.c  aigFanout.c  aigMan.c  aigMem.c  aigMffc.c  aigObj.c  aigOper.c  aigTable.c  aigTruth.c  aigUtil.c  aigWin.c
lib/abc/c/base/abc/: abc.h  abcAig.c  abcCheck.c  abcDfs.c  abcFanio.c  abcNames.c  abcNtk.c  abcObj.c  abcRefs.c  abcUtil.c
lib/abc/c/base/abci/: abc.c  abcBalance.c  abcCut.c  abcDar.c  abcReconv.c  abcRefactor.c  abcResub.c  abcRewrite.c  abcStrash.c
lib/abc/c/base/cmd/: cmd.c  cmd.h  cmdApi.c  cmdInt.h  cmdUtils.c
lib/abc/c/base/io/: io.c  ioAbc.h  ioReadAiger.c  ioUtil.c  ioWriteAiger.c
lib/abc/c/base/main/: abcapis.h  main.h  mainFrame.c  mainInit.c  mainInt.h  mainLib.c  mainReal.c  mainUtils.c
lib/abc/c/bool/dec/: dec.h  decAbc.c  decMan.c  decUtil.c
lib/abc/c/bool/kit/: kit.h  kitFactor.c  kitGraph.c  kitIsop.c  kitSop.c  kitTruth.c
lib/abc/c/misc/extra/: extra.h  extraUtilFile.c  extraUtilMemory.c  extraUtilMisc.c  extraUtilTruth.c  extraUtilUtil.c
lib/abc/c/misc/mem/: mem.c  mem.h  mem2.h
lib/abc/c/misc/mvc/: mvc.h  mvcMan.c
lib/abc/c/misc/nm/: nm.h  nmApi.c  nmInt.h  nmTable.c
lib/abc/c/misc/st/: st.c  st.h
lib/abc/c/misc/util/: abc_global.h
lib/abc/c/misc/vec/: vec.h  vecBit.h  vecFlt.h  vecHash.h  vecHsh.h  vecInt.h  vecMem.h  vecPtr.h  vecQue.h  vecSet.h  vecStr.h  vecVec.h  vecWec.h
lib/abc/c/opt/cut/: cut.h  cutApi.c  cutCut.c  cutInt.h  cutList.h  cutMan.c  cutMerge.c  cutNode.c  cutTruth.c
lib/abc/c/opt/dar/: dar.h  darApi.h  darCore.c  darCut.c  darData.c  darInt.h  darLib.c  darMan.c  darPrec.c  darRefact.c
lib/abc/c/opt/rwr/: rwr.h  rwrDec.c  rwrEva.c  rwrLib.c  rwrMan.c  rwrUtil.c
lib/abc/src/: bindings.rs  lib.rs
lib/aiger/: Cargo.toml  build.rs
lib/aiger/c/: aiger.c  aiger.h
lib/aiger/src/: bindings.rs  lib.rs
lib/build_util/: Cargo.toml
lib/build_util/src/: lib.rs
lib/cudd/: Cargo.toml  build.rs
lib/cudd/c/cudd/: cudd.h  cuddAPI.c  cuddAddAbs.c  cuddAddApply.c  cuddAddFind.c  cuddAddInv.c  cuddAddIte.c  cuddAddNeg.c  cuddAddWalsh.c  cuddAndAbs.c  cuddApprox.c  cuddBddAbs.c  cuddBddIte.c  cuddBridge.c  cuddClip.c  cuddCof.c  cuddCompose.c  cuddDecomp.c  cuddEssent.c  cuddExport.c  cuddGenCof.c  cuddGroup.c  cuddHarwell.c  cuddInit.c  cuddInt.h  cuddLiteral.c  cuddMatMult.c  (+20 more)
lib/cudd/src/: bindings.rs  cfile.rs  lib.rs
lib/owl/: Cargo.toml  build.rs
lib/owl/scripts/: link_static_lib.cmd  link_static_lib.sh
lib/owl/src/: automaton.rs  bindings.rs  formula.rs  graal.rs  lib.rs  tree.rs
scripts/: install_verification_tools.sh  strix_tlsf.sh  verify_aiger.sh  verify_hoa.sh
scripts/patches/: nusmv_cmake.patch  nusmv_cudd.patch  nusmv_minisat.patch
src/: lib.rs  main.rs  options.rs
src/constructor/: mod.rs  queue.rs
src/controller/: aiger.rs  bdd.rs  labelling.rs  mod.rs
src/controller/machine/: minimization.rs  mod.rs  sat.rs
src/parity/: game.rs  mod.rs
src/parity/solver/: fpi.rs  incremental.rs  mod.rs  si.rs  zlk.rs
tests/: integration.rs
(+3 files in other folders)
