[package]
name = "strix"
description = "A tool for reactive synthesis of controllers from LTL specifications"
version = "21.0.0"
authors = ["Philipp Meyer <p.j.meyer@tum.de>"]
edition = "2018"
license = "AGPLv3"
homepage = "https://strix.model.in.tum.de/"
repository = "https://github.com/meyerphi/strix"
readme = "README.md"
publish = false

[[bin]]
name = "strix"
path = "src/main.rs"

[lib]
name = "strix"
path = "src/lib.rs"

[profile.release]
lto = true
codegen-units = 1

[workspace]
members = [
    "lib/build_util",
    "lib/owl",
    "lib/aiger",
    "lib/cudd",
    "lib/abc",
    "dist",
]

[dependencies]
owl = { path = "lib/owl" }
cudd = { path = "lib/cudd" }
aiger = { path = "lib/aiger" }
abc = { path = "lib/abc" }
fs-err = "2.6.0"
fixedbitset = "0.4.0"
min-max-heap = "1.3.0"
varisat = "0.2.2"
clap = { git = "https://github.com/clap-rs/clap/" }
log = "0.4.14"

[dependencies.tinyvec]
version = "1.2.0"
features = ["alloc"]

[dependencies.env_logger]
version = "0.8.4"
default_features = false
features = ["termcolor", "atty", "humantime"]

[dev-dependencies]
tempfile = "3.2.0"
