[package]
name = "abc"
version = "0.1.0"
authors = ["Philipp Meyer <p.j.meyer@tum.de>"]
edition = "2018"

[dependencies]
aiger = { path = "../aiger" }

[build-dependencies]
build_util = { path = "../build_util" }
walkdir = "2.3.2"
bindgen = { version = "0.58.1", default_features = false, features = ["runtime"] }
cc = "1.0.68"
